--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,26 @@
-spring.application.name=yumi-admin-api
+server:
+  port: 9001
+  servlet:
+    encoding:
+      charset: utf-8
+
+spring:
+  application:
+    name: yumi-admin-api
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 246626
+    url: jdbc:mysql://localhost:3306/yumi_admin?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+
+
+mybatis-plus:
+  global-config:
+    banner: false
+    db-config:
+      id-type: assign_uuid
+
+# token 配置
+token:
+  expire: 3600
+  secret: yumi-admin-api
